# rust-ray-tracing

./: .gitignore  Cargo.toml  Settings.toml  readme.md
src/: colorRgb.rs  color_rgb.rs  main.rs
src/camera/: camera.rs  mod.rs
src/color_rgb/: color_rgb.rs  color_rgb_ppm.rs  mod.rs
src/config/: aspect_ratio_string.rs  config.rs  mod.rs  settings.rs
src/degrees/: degrees.rs  mod.rs
src/dot/: dot.rs  mod.rs
src/hittable/: hit_record.rs  hittable.rs  hittable_list.rs  mod.rs
src/material/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/ppm_file/: image.rs  image_lazy.rs  mod.rs  ppm.rs  size.rs
src/ray/: mod.rs  ray.rs
src/sphere/: hit_record.rs  hittable.rs  mod.rs  sphere.rs
src/vector/: mod.rs  point3.rs  vec3.rs  vec3_tests.rs
tests/: trivial.rs  trivial_second.rs
