[package]
name = "rust-ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.6"
colored = "2.0.0"
config = "0.13.3"
lazy_static = "1.4.0"
rand = "0.8.4"
rayon = "1.5"
png = "0.17.2"
